No sé que he tocado pero compila.
Salud y república.

--- a/practica3/practica3_XXXXXX_c++/Makefile
+++ b/practica3/practica3_XXXXXX_c++/Makefile
@@ -10,7 +10,7 @@ OBJS=$(SRCS:.cc=.o)
 
 all: $(PROG)
 
-$(PROG): $(OBJS) nodo.h
+$(PROG): $(OBJS) nodo.h excepcion_arbol_ficheros.h
 	$(CC) $(CFLAGS) -o $@ $^
 
 %.o: %.cc
